--- a/index-umd.html
+++ b/index-umd.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing UMD library</title>
-    <!-- <script src="./packages/rollupLibs/dist/foundation.umd.js"></script> -->
+     <!-- <script src="./packages/rollupLibs/dist/foundation.umd.js"></script>  -->
 
     <script src="./packages/rollupLibs/dist/foundations-iife.js"></script>
-    <script src="./packages/rollupLibs/dist/foundations-esm.js"></script>
+    <!-- <script src="./packages/rollupLibs/dist/foundations-esm.js"></script> -->
 </head>
 <body>
-    <script>
+    <script defer>
         // Use the library
-       // foundationUMD.UMDArrowFunction(); // calling Lib method
-
-       // foundationIIFE.IIFEFunction();
+        //foundationUMD.UMDArrowFunction(); // calling Lib method
+        foundationIIFE.IIFEFunction();
     </script>
 </body>
 </html>
